parsing/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    ECONST

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> translation_unit_opt
Rule 2     translation_unit_opt -> external_declaration
Rule 3     translation_unit_opt -> translation_unit external_declaration
Rule 4     external_declaration -> function_definition
Rule 5     external_declaration -> declaration
Rule 6     function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 7     function_definition -> declarator declaration_list compound_statement
Rule 8     function_definition -> declarator compound_statement
Rule 9     function_definition -> declaration_specifiers declarator compound_statement
Rule 10    declaration -> declaration_specifiers init_declarator_list SEMI
Rule 11    declaration -> declaration_specifiers SEMI
Rule 12    declaration_list -> declaration
Rule 13    declaration_list -> declaration_list declaration
Rule 14    declaration_specifiers -> storage_class_specifier declaration_specifiers
Rule 15    declaration_specifiers -> type_specifier declaration_specifiers
Rule 16    declaration_specifiers -> type_qualifier declaration_specifiers
Rule 17    declaration_specifiers -> storage_class_specifier
Rule 18    declaration_specifiers -> type_specifier
Rule 19    declaration_specifiers -> type_qualifier
Rule 20    storage_class_specifier -> AUTO
Rule 21    storage_class_specifier -> REGISTER
Rule 22    storage_class_specifier -> STATIC
Rule 23    storage_class_specifier -> EXTERN
Rule 24    storage_class_specifier -> TYPEDEF
Rule 25    type_specifier -> VOID
Rule 26    type_specifier -> CHAR
Rule 27    type_specifier -> SHORT
Rule 28    type_specifier -> INT
Rule 29    type_specifier -> LONG
Rule 30    type_specifier -> FLOAT
Rule 31    type_specifier -> DOUBLE
Rule 32    type_specifier -> SIGNED
Rule 33    type_specifier -> UNSIGNED
Rule 34    type_specifier -> struct_or_union_specifier
Rule 35    type_specifier -> enum_specifier
Rule 36    type_specifier -> TYPEID
Rule 37    type_qualifier -> CONST
Rule 38    type_qualifier -> VOLATILE
Rule 39    struct_or_union_specifier -> struct_or_union identifier LBRACE struct_declaration_list RBRACE
Rule 40    struct_or_union_specifier -> struct_or_union LBRACE struct_declaration_list RBRACE
Rule 41    struct_or_union_specifier -> struct_or_union identifier
Rule 42    struct_or_union -> STRUCT
Rule 43    struct_or_union -> UNION
Rule 44    struct_declaration_list -> struct_declaration
Rule 45    struct_declaration_list -> struct_declaration_list struct_declaration
Rule 46    init_declarator_list -> init_declarator
Rule 47    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 48    init_declarator -> declarator
Rule 49    init_declarator -> declarator EQUALS initializer
Rule 50    struct_declaration -> specifier_qualifier_list struct_declarator_list SEMI
Rule 51    specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 52    specifier_qualifier_list -> type_specifier
Rule 53    specifier_qualifier_list -> type_qualifier specifier_qualifier_list
Rule 54    specifier_qualifier_list -> type_qualifier
Rule 55    struct_declarator_list -> struct_declarator
Rule 56    struct_declarator_list -> struct_declarator_list COMMA struct_declarator
Rule 57    struct_declarator -> declarator
Rule 58    struct_declarator -> declarator COLON constant_expression
Rule 59    struct_declarator -> COLON constant_expression
Rule 60    enum_specifier -> ENUM identifier LBRACE enumerator_list RBRACE
Rule 61    enum_specifier -> ENUM LBRACE enumerator_list RBRACE
Rule 62    enum_specifier -> ENUM identifier
Rule 63    enumerator_list -> enumerator
Rule 64    enumerator_list -> enumerator_list COMMA enumerator
Rule 65    enumerator -> identifier
Rule 66    enumerator -> identifier EQUALS constant_expression
Rule 67    declarator -> pointer direct_declarator
Rule 68    declarator -> direct_declarator
Rule 69    direct_declarator -> identifier
Rule 70    direct_declarator -> LPAREN declarator RPAREN
Rule 71    direct_declarator -> direct_declarator LBRACKET constant_expression_option RBRACKET
Rule 72    direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 73    direct_declarator -> direct_declarator LPAREN identifier_list RPAREN
Rule 74    direct_declarator -> direct_declarator LPAREN RPAREN
Rule 75    pointer -> TIMES type_qualifier_list
Rule 76    pointer -> TIMES
Rule 77    pointer -> TIMES type_qualifier_list pointer
Rule 78    pointer -> TIMES pointer
Rule 79    type_qualifier_list -> type_qualifier
Rule 80    type_qualifier_list -> type_qualifier_list type_qualifier
Rule 81    parameter_type_list -> parameter_list
Rule 82    parameter_type_list -> parameter_list COMMA ELLIPSIS
Rule 83    parameter_list -> parameter_declaration
Rule 84    parameter_list -> parameter_list COMMA parameter_declaration
Rule 85    parameter_declaration -> declaration_specifiers declarator
Rule 86    parameter_declaration -> declaration_specifiers abstract_declarator_option
Rule 87    identifier_list -> identifier
Rule 88    identifier_list -> identifier_list COMMA identifier
Rule 89    initializer -> assignment_expression
Rule 90    initializer -> LBRACE initializer_list RBRACE
Rule 91    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 92    initializer_list -> initializer
Rule 93    initializer_list -> initializer_list COMMA initializer
Rule 94    type_name -> specifier_qualifier_list abstract_declarator_option
Rule 95    abstract_declarator_option -> empty
Rule 96    abstract_declarator_option -> abstract_declarator
Rule 97    abstract_declarator -> pointer
Rule 98    abstract_declarator -> pointer direct_abstract_declarator
Rule 99    abstract_declarator -> direct_abstract_declarator
Rule 100   direct_abstract_declarator -> LPAREN abstract_declarator RPAREN
Rule 101   direct_abstract_declarator -> direct_abstract_declarator LBRACKET constant_expression_option RBRACKET
Rule 102   direct_abstract_declarator -> LBRACKET constant_expression_option RBRACKET
Rule 103   direct_abstract_declarator -> direct_abstract_declarator LPAREN parameter_type_list_option RPAREN
Rule 104   direct_abstract_declarator -> LPAREN parameter_type_list_option RPAREN
Rule 105   constant_expression_option -> empty
Rule 106   constant_expression_option -> constant_expression
Rule 107   parameter_type_list_option -> empty
Rule 108   parameter_type_list_option -> parameter_type_list
Rule 109   statement -> labeled_statement
Rule 110   statement -> expression_statement
Rule 111   statement -> compound_statement
Rule 112   statement -> selection_statement
Rule 113   statement -> iteration_statement
Rule 114   statement -> jump_statement
Rule 115   labeled_statement -> identifier COLON statement
Rule 116   labeled_statement -> CASE constant_expression COLON statement
Rule 117   labeled_statement -> DEFAULT COLON statement
Rule 118   expression_statement -> expression_option SEMI
Rule 119   compound_statement -> LBRACE enter_scope insert_mode declaration_list lookup_mode statement_list leave_scope RBRACE
Rule 120   compound_statement -> LBRACE enter_scope lookup_mode statement_list leave_scope RBRACE
Rule 121   compound_statement -> LBRACE enter_scope insert_mode declaration_list lookup_mode leave_scope RBRACE
Rule 122   compound_statement -> LBRACE RBRACE
Rule 123   statement_list -> statement
Rule 124   statement_list -> statement_list statement
Rule 125   selection_statement -> IF LPAREN expression RPAREN statement
Rule 126   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 127   selection_statement -> SWITCH LPAREN expression RPAREN statement
Rule 128   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 129   iteration_statement -> FOR LPAREN expression_option SEMI expression_option SEMI expression_option RPAREN statement
Rule 130   iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMI
Rule 131   jump_statement -> GOTO identifier SEMI
Rule 132   jump_statement -> CONTINUE SEMI
Rule 133   jump_statement -> BREAK SEMI
Rule 134   jump_statement -> RETURN expression_option SEMI
Rule 135   expression_option -> empty
Rule 136   expression_option -> expression
Rule 137   expression -> assignment_expression
Rule 138   expression -> expression COMMA assignment_expression
Rule 139   assignment_expression -> conditional_expression
Rule 140   assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 141   assignment_operator -> EQUALS
Rule 142   assignment_operator -> TIMESEQUAL
Rule 143   assignment_operator -> DIVEQUAL
Rule 144   assignment_operator -> MODEQUAL
Rule 145   assignment_operator -> PLUSEQUAL
Rule 146   assignment_operator -> MINUSEQUAL
Rule 147   assignment_operator -> LSHIFTEQUAL
Rule 148   assignment_operator -> RSHIFTEQUAL
Rule 149   assignment_operator -> ANDEQUAL
Rule 150   assignment_operator -> OREQUAL
Rule 151   assignment_operator -> XOREQUAL
Rule 152   conditional_expression -> logical_or_expression
Rule 153   conditional_expression -> logical_or_expression CONDOP expression COLON conditional_expression
Rule 154   constant_expression -> conditional_expression
Rule 155   logical_or_expression -> logical_and_expression
Rule 156   logical_or_expression -> logical_or_expression LOR logical_and_expression
Rule 157   logical_and_expression -> inclusive_or_expression
Rule 158   logical_and_expression -> logical_and_expression LAND inclusive_or_expression
Rule 159   inclusive_or_expression -> exclusive_or_expression
Rule 160   inclusive_or_expression -> inclusive_or_expression OR exclusive_or_expression
Rule 161   exclusive_or_expression -> and_expression
Rule 162   exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 163   and_expression -> equality_expression
Rule 164   and_expression -> and_expression AND equality_expression
Rule 165   equality_expression -> relational_expression
Rule 166   equality_expression -> equality_expression EQ relational_expression
Rule 167   equality_expression -> equality_expression NE relational_expression
Rule 168   relational_expression -> shift_expression
Rule 169   relational_expression -> relational_expression LT shift_expression
Rule 170   relational_expression -> relational_expression GT shift_expression
Rule 171   relational_expression -> relational_expression LE shift_expression
Rule 172   relational_expression -> relational_expression GE shift_expression
Rule 173   shift_expression -> additive_expression
Rule 174   shift_expression -> shift_expression LSHIFT additive_expression
Rule 175   shift_expression -> shift_expression RSHIFT additive_expression
Rule 176   additive_expression -> multiplicative_expression
Rule 177   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 178   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 179   multiplicative_expression -> cast_expression
Rule 180   multiplicative_expression -> multiplicative_expression TIMES cast_expression
Rule 181   multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 182   multiplicative_expression -> multiplicative_expression MOD cast_expression
Rule 183   cast_expression -> unary_expression
Rule 184   cast_expression -> LPAREN type_name RPAREN cast_expression
Rule 185   unary_expression -> postfix_expression
Rule 186   unary_expression -> PLUSPLUS unary_expression
Rule 187   unary_expression -> MINUSMINUS unary_expression
Rule 188   unary_expression -> unary_operator cast_expression
Rule 189   unary_expression -> SIZEOF unary_expression
Rule 190   unary_expression -> SIZEOF LPAREN type_name RPAREN
Rule 191   unary_operator -> AND
Rule 192   unary_operator -> TIMES
Rule 193   unary_operator -> PLUS
Rule 194   unary_operator -> MINUS
Rule 195   unary_operator -> NOT
Rule 196   unary_operator -> LNOT
Rule 197   postfix_expression -> primary_expression
Rule 198   postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 199   postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 200   postfix_expression -> postfix_expression LPAREN RPAREN
Rule 201   postfix_expression -> postfix_expression PERIOD identifier
Rule 202   postfix_expression -> postfix_expression ARROW identifier
Rule 203   postfix_expression -> postfix_expression PLUSPLUS
Rule 204   postfix_expression -> postfix_expression MINUSMINUS
Rule 205   primary_expression -> identifier
Rule 206   primary_expression -> constant
Rule 207   primary_expression -> string_literal
Rule 208   string_literal -> SCONST
Rule 209   string_literal -> string_literal SCONST
Rule 210   primary_expression -> LPAREN expression RPAREN
Rule 211   argument_expression_list -> assignment_expression
Rule 212   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 213   constant -> ICONST
Rule 214   constant -> FCONST
Rule 215   constant -> CCONST
Rule 216   identifier -> ID
Rule 217   empty -> <empty>
Rule 218   enter_scope -> empty
Rule 219   insert_mode -> empty
Rule 220   leave_scope -> empty
Rule 221   lookup_mode -> empty

Terminals, with rules where they appear

AND                  : 164 191
ANDEQUAL             : 149
ARROW                : 202
AUTO                 : 20
BREAK                : 133
CASE                 : 116
CCONST               : 215
CHAR                 : 26
COLON                : 58 59 115 116 117 153
COMMA                : 47 56 64 82 84 88 91 93 138 212
CONDOP               : 153
CONST                : 37
CONTINUE             : 132
DEFAULT              : 117
DIVEQUAL             : 143
DIVIDE               : 181
DO                   : 130
DOUBLE               : 31
ECONST               : 
ELLIPSIS             : 82
ELSE                 : 126
ENUM                 : 60 61 62
EQ                   : 166
EQUALS               : 49 66 141
EXTERN               : 23
FCONST               : 214
FLOAT                : 30
FOR                  : 129
GE                   : 172
GOTO                 : 131
GT                   : 170
ICONST               : 213
ID                   : 216
IF                   : 125 126
INT                  : 28
LAND                 : 158
LBRACE               : 39 40 60 61 90 91 119 120 121 122
LBRACKET             : 71 101 102 198
LE                   : 171
LNOT                 : 196
LONG                 : 29
LOR                  : 156
LPAREN               : 70 72 73 74 100 103 104 125 126 127 128 129 130 184 190 199 200 210
LSHIFT               : 174
LSHIFTEQUAL          : 147
LT                   : 169
MINUS                : 178 194
MINUSEQUAL           : 146
MINUSMINUS           : 187 204
MOD                  : 182
MODEQUAL             : 144
NE                   : 167
NOT                  : 195
OR                   : 160
OREQUAL              : 150
PERIOD               : 201
PLUS                 : 177 193
PLUSEQUAL            : 145
PLUSPLUS             : 186 203
RBRACE               : 39 40 60 61 90 91 119 120 121 122
RBRACKET             : 71 101 102 198
REGISTER             : 21
RETURN               : 134
RPAREN               : 70 72 73 74 100 103 104 125 126 127 128 129 130 184 190 199 200 210
RSHIFT               : 175
RSHIFTEQUAL          : 148
SCONST               : 208 209
SEMI                 : 10 11 50 118 129 129 130 131 132 133 134
SHORT                : 27
SIGNED               : 32
SIZEOF               : 189 190
STATIC               : 22
STRUCT               : 42
SWITCH               : 127
TIMES                : 75 76 77 78 180 192
TIMESEQUAL           : 142
TYPEDEF              : 24
TYPEID               : 36
UNION                : 43
UNSIGNED             : 33
VOID                 : 25
VOLATILE             : 38
WHILE                : 128 130
XOR                  : 162
XOREQUAL             : 151
error                : 

Nonterminals, with rules where they appear

abstract_declarator  : 96 100
abstract_declarator_option : 86 94
additive_expression  : 173 174 175 177 178
and_expression       : 161 162 164
argument_expression_list : 199 212
assignment_expression : 89 137 138 140 211 212
assignment_operator  : 140
cast_expression      : 179 180 181 182 184 188
compound_statement   : 6 7 8 9 111
conditional_expression : 139 153 154
constant             : 206
constant_expression  : 58 59 66 106 116
constant_expression_option : 71 101 102
declaration          : 5 12 13
declaration_list     : 6 7 13 119 121
declaration_specifiers : 6 9 10 11 14 15 16 85 86
declarator           : 6 7 8 9 48 49 57 58 70 85
direct_abstract_declarator : 98 99 101 103
direct_declarator    : 67 68 71 72 73 74
empty                : 95 105 107 135 218 219 220 221
enter_scope          : 119 120 121
enum_specifier       : 35
enumerator           : 63 64
enumerator_list      : 60 61 64
equality_expression  : 163 164 166 167
exclusive_or_expression : 159 160 162
expression           : 125 126 127 128 130 136 138 153 198 210
expression_option    : 118 129 129 129 134
expression_statement : 110
external_declaration : 2 3
function_definition  : 4
identifier           : 39 41 60 62 65 66 69 87 88 115 131 201 202 205
identifier_list      : 73 88
inclusive_or_expression : 157 158 160
init_declarator      : 46 47
init_declarator_list : 10 47
initializer          : 49 92 93
initializer_list     : 90 91 93
insert_mode          : 119 121
iteration_statement  : 113
jump_statement       : 114
labeled_statement    : 109
leave_scope          : 119 120 121
logical_and_expression : 155 156 158
logical_or_expression : 152 153 156
lookup_mode          : 119 120 121
multiplicative_expression : 176 177 178 180 181 182
parameter_declaration : 83 84
parameter_list       : 81 82 84
parameter_type_list  : 72 108
parameter_type_list_option : 103 104
pointer              : 67 77 78 97 98
postfix_expression   : 185 198 199 200 201 202 203 204
primary_expression   : 197
relational_expression : 165 166 167 169 170 171 172
selection_statement  : 112
shift_expression     : 168 169 170 171 172 174 175
specifier_qualifier_list : 50 51 53 94
statement            : 115 116 117 123 124 125 126 126 127 128 129 130
statement_list       : 119 120 124
storage_class_specifier : 14 17
string_literal       : 207 209
struct_declaration   : 44 45
struct_declaration_list : 39 40 45
struct_declarator    : 55 56
struct_declarator_list : 50 56
struct_or_union      : 39 40 41
struct_or_union_specifier : 34
translation_unit     : 3 0
translation_unit_opt : 1
type_name            : 184 190
type_qualifier       : 16 19 53 54 79 80
type_qualifier_list  : 75 77 80
type_specifier       : 15 18 51 52
unary_expression     : 140 183 186 187 189
unary_operator       : 188

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . translation_unit_opt
    (2) translation_unit_opt -> . external_declaration
    (3) translation_unit_opt -> . translation_unit external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (6) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (7) function_definition -> . declarator declaration_list compound_statement
    (8) function_definition -> . declarator compound_statement
    (9) function_definition -> . declaration_specifiers declarator compound_statement
    (10) declaration -> . declaration_specifiers init_declarator_list SEMI
    (11) declaration -> . declaration_specifiers SEMI
    (14) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (15) declaration_specifiers -> . type_specifier declaration_specifiers
    (16) declaration_specifiers -> . type_qualifier declaration_specifiers
    (17) declaration_specifiers -> . storage_class_specifier
    (18) declaration_specifiers -> . type_specifier
    (19) declaration_specifiers -> . type_qualifier
    (67) declarator -> . pointer direct_declarator
    (68) declarator -> . direct_declarator
    (20) storage_class_specifier -> . AUTO
    (21) storage_class_specifier -> . REGISTER
    (22) storage_class_specifier -> . STATIC
    (23) storage_class_specifier -> . EXTERN
    (24) storage_class_specifier -> . TYPEDEF
    (25) type_specifier -> . VOID
    (26) type_specifier -> . CHAR
    (27) type_specifier -> . SHORT
    (28) type_specifier -> . INT
    (29) type_specifier -> . LONG
    (30) type_specifier -> . FLOAT
    (31) type_specifier -> . DOUBLE
    (32) type_specifier -> . SIGNED
    (33) type_specifier -> . UNSIGNED
    (34) type_specifier -> . struct_or_union_specifier
    (35) type_specifier -> . enum_specifier
    (36) type_specifier -> . TYPEID
    (37) type_qualifier -> . CONST
    (38) type_qualifier -> . VOLATILE
    (75) pointer -> . TIMES type_qualifier_list
    (76) pointer -> . TIMES
    (77) pointer -> . TIMES type_qualifier_list pointer
    (78) pointer -> . TIMES pointer
    (69) direct_declarator -> . identifier
    (70) direct_declarator -> . LPAREN declarator RPAREN
    (71) direct_declarator -> . direct_declarator LBRACKET constant_expression_option RBRACKET
    (72) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (73) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (74) direct_declarator -> . direct_declarator LPAREN RPAREN
    (39) struct_or_union_specifier -> . struct_or_union identifier LBRACE struct_declaration_list RBRACE
    (40) struct_or_union_specifier -> . struct_or_union LBRACE struct_declaration_list RBRACE
    (41) struct_or_union_specifier -> . struct_or_union identifier
    (60) enum_specifier -> . ENUM identifier LBRACE enumerator_list RBRACE
    (61) enum_specifier -> . ENUM LBRACE enumerator_list RBRACE
    (62) enum_specifier -> . ENUM identifier
    (216) identifier -> . ID
    (42) struct_or_union -> . STRUCT
    (43) struct_or_union -> . UNION

    AUTO            shift and go to state 24
    REGISTER        shift and go to state 38
    STATIC          shift and go to state 15
    EXTERN          shift and go to state 7
    TYPEDEF         shift and go to state 19
    VOID            shift and go to state 37
    CHAR            shift and go to state 2
    SHORT           shift and go to state 33
    INT             shift and go to state 28
    LONG            shift and go to state 32
    FLOAT           shift and go to state 35
    DOUBLE          shift and go to state 25
    SIGNED          shift and go to state 30
    UNSIGNED        shift and go to state 5
    TYPEID          shift and go to state 8
    CONST           shift and go to state 4
    VOLATILE        shift and go to state 13
    TIMES           shift and go to state 21
    LPAREN          shift and go to state 34
    ENUM            shift and go to state 36
    ID              shift and go to state 3
    STRUCT          shift and go to state 27
    UNION           shift and go to state 9

    pointer                        shift and go to state 22
    translation_unit               shift and go to state 23
    external_declaration           shift and go to state 6
    type_qualifier                 shift and go to state 26
    struct_or_union_specifier      shift and go to state 10
    storage_class_specifier        shift and go to state 11
    translation_unit_opt           shift and go to state 12
    type_specifier                 shift and go to state 29
    struct_or_union                shift and go to state 18
    enum_specifier                 shift and go to state 31
    declarator                     shift and go to state 14
    direct_declarator              shift and go to state 1
    function_definition            shift and go to state 16
    identifier                     shift and go to state 17
    declaration                    shift and go to state 20
    declaration_specifiers         shift and go to state 39

state 1

    (68) declarator -> direct_declarator .
    (71) direct_declarator -> direct_declarator . LBRACKET constant_expression_option RBRACKET
    (72) direct_declarator -> direct_declarator . LPAREN parameter_type_list RPAREN
    (73) direct_declarator -> direct_declarator . LPAREN identifier_list RPAREN
    (74) direct_declarator -> direct_declarator . LPAREN RPAREN

    COMMA           reduce using rule 68 (declarator -> direct_declarator .)
    RPAREN          reduce using rule 68 (declarator -> direct_declarator .)
    EQUALS          reduce using rule 68 (declarator -> direct_declarator .)
    LBRACE          reduce using rule 68 (declarator -> direct_declarator .)
    AUTO            reduce using rule 68 (declarator -> direct_declarator .)
    REGISTER        reduce using rule 68 (declarator -> direct_declarator .)
    STATIC          reduce using rule 68 (declarator -> direct_declarator .)
    EXTERN          reduce using rule 68 (declarator -> direct_declarator .)
    TYPEDEF         reduce using rule 68 (declarator -> direct_declarator .)
    VOID            reduce using rule 68 (declarator -> direct_declarator .)
    CHAR            reduce using rule 68 (declarator -> direct_declarator .)
    SHORT           reduce using rule 68 (declarator -> direct_declarator .)
    INT             reduce using rule 68 (declarator -> direct_declarator .)
    LONG            reduce using rule 68 (declarator -> direct_declarator .)
    FLOAT           reduce using rule 68 (declarator -> direct_declarator .)
    DOUBLE          reduce using rule 68 (declarator -> direct_declarator .)
    SIGNED          reduce using rule 68 (declarator -> direct_declarator .)
    UNSIGNED        reduce using rule 68 (declarator -> direct_declarator .)
    TYPEID          reduce using rule 68 (declarator -> direct_declarator .)
    CONST           reduce using rule 68 (declarator -> direct_declarator .)
    VOLATILE        reduce using rule 68 (declarator -> direct_declarator .)
    ENUM            reduce using rule 68 (declarator -> direct_declarator .)
    STRUCT          reduce using rule 68 (declarator -> direct_declarator .)
    UNION           reduce using rule 68 (declarator -> direct_declarator .)
    SEMI            reduce using rule 68 (declarator -> direct_declarator .)
    COLON           reduce using rule 68 (declarator -> direct_declarator .)
    LBRACKET        shift and go to state 40
    LPAREN          shift and go to state 41


state 2

    (26) type_specifier -> CHAR .

    AUTO            reduce using rule 26 (type_specifier -> CHAR .)
    REGISTER        reduce using rule 26 (type_specifier -> CHAR .)
    STATIC          reduce using rule 26 (type_specifier -> CHAR .)
    EXTERN          reduce using rule 26 (type_specifier -> CHAR .)
    TYPEDEF         reduce using rule 26 (type_specifier -> CHAR .)
    VOID            reduce using rule 26 (type_specifier -> CHAR .)
    CHAR            reduce using rule 26 (type_specifier -> CHAR .)
    SHORT           reduce using rule 26 (type_specifier -> CHAR .)
    INT             reduce using rule 26 (type_specifier -> CHAR .)
    LONG            reduce using rule 26 (type_specifier -> CHAR .)
    FLOAT           reduce using rule 26 (type_specifier -> CHAR .)
    DOUBLE          reduce using rule 26 (type_specifier -> CHAR .)
    SIGNED          reduce using rule 26 (type_specifier -> CHAR .)
    UNSIGNED        reduce using rule 26 (type_specifier -> CHAR .)
    TYPEID          reduce using rule 26 (type_specifier -> CHAR .)
    CONST           reduce using rule 26 (type_specifier -> CHAR .)
    VOLATILE        reduce using rule 26 (type_specifier -> CHAR .)
    ENUM            reduce using rule 26 (type_specifier -> CHAR .)
    STRUCT          reduce using rule 26 (type_specifier -> CHAR .)
    UNION           reduce using rule 26 (type_specifier -> CHAR .)
    SEMI            reduce using rule 26 (type_specifier -> CHAR .)
    TIMES           reduce using rule 26 (type_specifier -> CHAR .)
    LPAREN          reduce using rule 26 (type_specifier -> CHAR .)
    ID              reduce using rule 26 (type_specifier -> CHAR .)
    LBRACKET        reduce using rule 26 (type_specifier -> CHAR .)
    COMMA           reduce using rule 26 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 26 (type_specifier -> CHAR .)
    COLON           reduce using rule 26 (type_specifier -> CHAR .)


state 3

    (216) identifier -> ID .

    LBRACKET        reduce using rule 216 (identifier -> ID .)
    LPAREN          reduce using rule 216 (identifier -> ID .)
    PERIOD          reduce using rule 216 (identifier -> ID .)
    ARROW           reduce using rule 216 (identifier -> ID .)
    PLUSPLUS        reduce using rule 216 (identifier -> ID .)
    MINUSMINUS      reduce using rule 216 (identifier -> ID .)
    TIMES           reduce using rule 216 (identifier -> ID .)
    DIVIDE          reduce using rule 216 (identifier -> ID .)
    MOD             reduce using rule 216 (identifier -> ID .)
    PLUS            reduce using rule 216 (identifier -> ID .)
    MINUS           reduce using rule 216 (identifier -> ID .)
    LSHIFT          reduce using rule 216 (identifier -> ID .)
    RSHIFT          reduce using rule 216 (identifier -> ID .)
    LT              reduce using rule 216 (identifier -> ID .)
    GT              reduce using rule 216 (identifier -> ID .)
    LE              reduce using rule 216 (identifier -> ID .)
    GE              reduce using rule 216 (identifier -> ID .)
    EQ              reduce using rule 216 (identifier -> ID .)
    NE              reduce using rule 216 (identifier -> ID .)
    AND             reduce using rule 216 (identifier -> ID .)
    XOR             reduce using rule 216 (identifier -> ID .)
    OR              reduce using rule 216 (identifier -> ID .)
    LAND            reduce using rule 216 (identifier -> ID .)
    CONDOP          reduce using rule 216 (identifier -> ID .)
    LOR             reduce using rule 216 (identifier -> ID .)
    RBRACKET        reduce using rule 216 (identifier -> ID .)
    RPAREN          reduce using rule 216 (identifier -> ID .)
    COMMA           reduce using rule 216 (identifier -> ID .)
    SEMI            reduce using rule 216 (identifier -> ID .)
    COLON           reduce using rule 216 (identifier -> ID .)
    RBRACE          reduce using rule 216 (identifier -> ID .)
    EQUALS          reduce using rule 216 (identifier -> ID .)
    TIMESEQUAL      reduce using rule 216 (identifier -> ID .)
    DIVEQUAL        reduce using rule 216 (identifier -> ID .)
    MODEQUAL        reduce using rule 216 (identifier -> ID .)
    PLUSEQUAL       reduce using rule 216 (identifier -> ID .)
    MINUSEQUAL      reduce using rule 216 (identifier -> ID .)
    LSHIFTEQUAL     reduce using rule 216 (identifier -> ID .)
    RSHIFTEQUAL     reduce using rule 216 (identifier -> ID .)
    ANDEQUAL        reduce using rule 216 (identifier -> ID .)
    OREQUAL         reduce using rule 216 (identifier -> ID .)
    XOREQUAL        reduce using rule 216 (identifier -> ID .)
    LBRACE          reduce using rule 216 (identifier -> ID .)
    AUTO            reduce using rule 216 (identifier -> ID .)
    REGISTER        reduce using rule 216 (identifier -> ID .)
    STATIC          reduce using rule 216 (identifier -> ID .)
    EXTERN          reduce using rule 216 (identifier -> ID .)
    TYPEDEF         reduce using rule 216 (identifier -> ID .)
    VOID            reduce using rule 216 (identifier -> ID .)
    CHAR            reduce using rule 216 (identifier -> ID .)
    SHORT           reduce using rule 216 (identifier -> ID .)
    INT             reduce using rule 216 (identifier -> ID .)
    LONG            reduce using rule 216 (identifier -> ID .)
    FLOAT           reduce using rule 216 (identifier -> ID .)
    DOUBLE          reduce using rule 216 (identifier -> ID .)
    SIGNED          reduce using rule 216 (identifier -> ID .)
    UNSIGNED        reduce using rule 216 (identifier -> ID .)
    TYPEID          reduce using rule 216 (identifier -> ID .)
    CONST           reduce using rule 216 (identifier -> ID .)
    VOLATILE        reduce using rule 216 (identifier -> ID .)
    ENUM            reduce using rule 216 (identifier -> ID .)
    STRUCT          reduce using rule 216 (identifier -> ID .)
    UNION           reduce using rule 216 (identifier -> ID .)
    ID              reduce using rule 216 (identifier -> ID .)


state 4

    (37) type_qualifier -> CONST .

    AUTO            reduce using rule 37 (type_qualifier -> CONST .)
    REGISTER        reduce using rule 37 (type_qualifier -> CONST .)
    STATIC          reduce using rule 37 (type_qualifier -> CONST .)
    EXTERN          reduce using rule 37 (type_qualifier -> CONST .)
    TYPEDEF         reduce using rule 37 (type_qualifier -> CONST .)
    VOID            reduce using rule 37 (type_qualifier -> CONST .)
    CHAR            reduce using rule 37 (type_qualifier -> CONST .)
    SHORT           reduce using rule 37 (type_qualifier -> CONST .)
    INT             reduce using rule 37 (type_qualifier -> CONST .)
    LONG            reduce using rule 37 (type_qualifier -> CONST .)
    FLOAT           reduce using rule 37 (type_qualifier -> CONST .)
    DOUBLE          reduce using rule 37 (type_qualifier -> CONST .)
    SIGNED          reduce using rule 37 (type_qualifier -> CONST .)
    UNSIGNED        reduce using rule 37 (type_qualifier -> CONST .)
    TYPEID          reduce using rule 37 (type_qualifier -> CONST .)
    CONST           reduce using rule 37 (type_qualifier -> CONST .)
    VOLATILE        reduce using rule 37 (type_qualifier -> CONST .)
    ENUM            reduce using rule 37 (type_qualifier -> CONST .)
    STRUCT          reduce using rule 37 (type_qualifier -> CONST .)
    UNION           reduce using rule 37 (type_qualifier -> CONST .)
    SEMI            reduce using rule 37 (type_qualifier -> CONST .)
    TIMES           reduce using rule 37 (type_qualifier -> CONST .)
    LPAREN          reduce using rule 37 (type_qualifier -> CONST .)
    ID              reduce using rule 37 (type_qualifier -> CONST .)
    COLON           reduce using rule 37 (type_qualifier -> CONST .)
    LBRACKET        reduce using rule 37 (type_qualifier -> CONST .)
    RPAREN          reduce using rule 37 (type_qualifier -> CONST .)
    COMMA           reduce using rule 37 (type_qualifier -> CONST .)


state 5

    (33) type_specifier -> UNSIGNED .
